@@ -1,0 +1,3 @@
+{form_input name="text_noval"}
+{form_input name="text_setactval"}
+{form_input name="text_settplval" value="1234"}
