@@ -1,0 +1,5 @@
+{form ethna_action="textarea_test"}
+  {form_input name="textarea_noval"}
+  {form_input name="textarea_setactval"}
+  {form_input name="textarea_settplval" value="foo"}
+{/form}
